[metadata]
name = tw_hop
version = 1.0
author = 'Nihal Bhatnagar'
author_email = 'nihal@trustwise.ai'
description = 'Hallucinations Observability Plugin'
long_description = ''
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
